<resources>
    <string name="app_name" translatable="false">News</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>


    <string name="help">Help</string>
    <string name="detail_help">This screen shows you detail of the article you clicked</string>
    <string name="main_help">Write your query in text box and app will show you article related to that query</string>
    <string name="ok">Ok</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="url">URL</string>
    <string name="favorite">Favorite</string>
    <string name="langauage_app">Here you can change the language of the app</string>
    <string name="language">Language</string>
    <string name="description">Description</string>
    <string name="publish_date">Publish Date</string>
    <string name="search">Search</string>
</resources>